src/snapshots/gphoto2__context__tests__list_cameras.snap
---
source: src/context.rs
expression: cameras
---
[
    CameraDescriptor {
        model: "Nikon DSC D750",
        port: "usb:001,001",
    },
]
